--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "dotenv": "^16.0.3",
     "react-error-overlay": "^6.0.9",
     "sass": "^1.49.9"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
